--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, Helvetica, sans-serif;
+	overflow-x: hidden;
+}
+
+.content-section {
+	margin: 0 auto 2rem;
+	width: 100%;
+	max-width: 60rem;
 }
 
 input,
